# zinnia

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  external  hello.jl  jasper.c  jasper_lang.bzl  jasperp.c  jeff_lang.bzl  lib.h  temp.jp  test.c  test.h  test.jb  test.jc  test.jl  test.jm  test.jv  zinnia.c  zinnia_lang.bzl  zinniac.c  zinniap.c  zinnias.c
compile/: BUILD  compile.c  compile.h  jasperc.c  jlc.c  jvc.c
docker/: Dockerfile
entity/: BUILD  entity.c  entity.h  object.c  object.h  primitive.c  primitive.h
heap/: BUILD  copy_fns.c  copy_fns.h  heap.c  heap.h  heap_analysis.ipynb
lib/: BUILD  async.jl  async.jp  async.jv  async.zn  build.jp  build.jv  build.zn  builtin.jl  builtin.jp  builtin.jv  builtin.zn  builtin_ext.jp  builtin_ext.jv  builtin_ext.zn  classes.jl  classes.jp  data.jp  data.zn  dynamic.jp  dynamic.jv  dynamic.zn  error.jl  error.jp  error.jv  error.zn  inject.jp  inject.zn  io.jl  io.jp  io.jv  io.zn  io_ext.jp  io_ext.zn  json.jp  json.zn  lib_gen_main.c  math.jl  math.jp  math.jv  (+21 more)
object/: BUILD  object.c  object.h
package/: BUILD  package.c  package.h
program/: BUILD  instruction.c  instruction.h  op.c  op.h  tape.c  tape.h  tape_binary.c  tape_binary.h
run/: BUILD  jasper.c  jlr.c  jvr.c  run.c  run.h
seed/: BUILD  seed.c  seed.h
struct/: BUILD  alist.c  alist.h  arraylike.h  keyed_list.c  keyed_list.h  q.c  q.h
test/: BUILD  annotations_test.jp  annotations_test.zn  data_test.jp  inject_test.jp  inject_test.zn  json_test.jp  json_test.zn  test.jp  test_annotations.jp  time_test.jp  time_test.zn
toolchain/: BUILD  cc_toolchain_config.bzl
util/: BUILD  codegen.c  codegen.h  file.c  file.h  platform.h  socket.c  socket.h  string.c  string.h  string_util.c  string_util.h  time.c  time.h
version/: BUILD  defs.bzl  version.h  version_gen_main.c
vm/: BUILD  builtin_modules.c  builtin_modules.h  intern.c  intern.h  module_manager.c  module_manager.h  virtual_machine.c  vm.c  (+2 more)
(+495 files in other folders)
