""" MODULE.bazel """

module(
    name = "zinnia",
    repo_name = "com_github_jeffmanzione_zinnia",
    version = "0.0.7",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_cc", version = "0.1.4", dev_dependency = True)


# For formatting:
# find . -regextype posix-extended -regex ".*\.(h|c)" | xargs -L1 clang-format --style=Google -i