""" MODULE.bazel """

module(
    name = "zinnia",
    version = "0.0.7",
    repo_name = "com_github_jeffmanzione_zinnia",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")

bazel_dep(name = "rules_cc", version = "0.1.4", dev_dependency = True)

bazel_dep(name = "jeffmanzione_c_data_structures", version = "1.0.3")
bazel_dep(name = "jeffmanzione_file_utils", version = "1.0.0")
bazel_dep(name = "jeffmanzione_intern", version = "1.0.2")
bazel_dep(name = "jeffmanzione_rzalloc", version = "1.0.1")
bazel_dep(name = "libzip", version = "1.11.4.bcr.1")

# For formatting:
# find . -regextype posix-extended -regex ".*\.(h|c)" | xargs -L1 clang-format --style=Google -i
